# autogent

./: .env  pyproject.toml
src/autoagent/config/: README.md  base_config.py  encryption.py  llm_config.py  llm_resolver.py  settings.ini  user_config.py
src/autoagent/executor/: README.md  agent_runner.py  conversation_manager.py  session_router.py  supervisor_channel.py
src/autoagent/llm/: README.md  client.py  core.py  factory.py
src/autoagent/llm/agents/: autonomous_agent.py  base_agent.py  code_agent.py  convo_overlap_agent.py  cot_agent.py  rag_agent.py  react_agent.py  self_refine_agent.py  tot_agent.py
src/autoagent/rag/: README.md  chunker.py  embedder.py  reranker.py  vector_store.py
src/autoagent/rag/retrievers/: base_retriever.py  contextual_rag.py  hybrid_rag.py  hyde_rag.py  long_rag.py  query_based_rag.py  speculative_rag.py  standard_rag.py
src/autoagent/tools/: README.md  __init__.py  base.py  registry.py  tool_runner.py
src/autoagent/tools/builtin_tools/: menu_lookup.py  reservation.py
